tests/algorithms/x/Pascal/digital_image_processing/morphological_operations/erosion_operation.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/digital_image_processing/morphological_operations/erosion_operation.pas
erosion_operation.pas(211,47) Error: Incompatible type for arg no. 1: Got "RealArrayArray", expected "{Open} Array Of LongInt"
erosion_operation.pas(213,51) Error: Incompatible type for arg no. 1: Got "BoolArrayArray", expected "{Open} Array Of LongInt"
erosion_operation.pas(216,49) Error: Incompatible type for arg no. 1: Got "BoolArrayArray", expected "{Open} Array Of LongInt"
erosion_operation.pas(219,49) Error: Incompatible type for arg no. 1: Got "BoolArrayArray", expected "{Open} Array Of LongInt"
erosion_operation.pas(228) Fatal: There were 4 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
